# sniper-ao

./: .dockerignore  .env.example  .gitignore  Dockerfile  database.py  love.py  main.py  pyproject.toml  test_main.py  test_mistral.py  test_pgvector.py  worker.py
.github/workflows/: ci.yml
beta_doc/: 4 MA Rénov plateau sportif.docx  C.5_Cadre des SDP.xls  MAPA_2026_08 _ AE.doc  MAPA_2026_08 _ DPGF.xlsx
routers/: __init__.py  analyses.py  projets.py
supabase/: config.toml
supabase/migrations/: 20260514182217_remote_schema.sql  20260514182524_create_analyses.sql  20260514185855_rls_analyses.sql  20260514192400_create_chunks.sql  20260514192635_add_vector_index.sql
