[project]
name = "sniper-ao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "arq>=0.28.0",
    "fastapi[standard]>=0.136.1",
    "mistralai>=2.4.5",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.14",
    "sqlalchemy>=2.0.49",
    "supabase>=2.30.0",
    "worker>=2018.4.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["test_main.py"]
